# todoist-reset-toolkit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cleanup_todoist_misc.py  delete_todoist_projects.py  delete_todoist_tasks.py  inspect_remaining_tasks.py  pyproject.toml  requirements.txt  todoist_api.py  todoist_reset.py  unarchive_todoist_projects.py
.github/workflows/: tests.yml
tests/: test_helpers.py  test_workflows.py
